--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.9.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "mongoose": "^8.14.1",
     "payu-websdk": "^1.2.0"
   },
   "devDependencies": {
